<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/ic_action_refresh"
        android:orderInCategory="1"
        android:title="@string/refresh"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/action_sort"
        android:icon="@drawable/ic_action_sort"
        android:orderInCategory="2"
        android:title="@string/sort"
        app:showAsAction="ifRoom"
        >

        <menu>
            <item
                android:id="@+id/action_popular"
                android:title="@string/popular_movie"
                app:showAsAction="ifRoom"/>
            <item
                android:id="@+id/action_now_playing"
                android:title="@string/now_playing_movie"
                app:showAsAction="ifRoom"/>
            <item
                android:id="@+id/action_top_rated"
                android:title="@string/top_rated_movie"
                app:showAsAction="ifRoom"/>
        </menu>

    </item>


</menu>